--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,26 @@ a {
     text-decoration: none;
 }
 
+ul {
+    list-style: none;
+}
+
 .container {
     max-width: 1220px;
     padding: 0 10px;
     margin: 0 auto;
+}
+
+.section-page {
+    padding: 100px 0;
+}
+
+.title {
+    text-align: center;
+    margin-bottom: 100px;
+    font-size: 36px;
+    line-height: 42px;
+    font-weight: 400;
 }
 
 .header {
@@ -68,3 +84,11 @@ a {
     padding-top: 178px;
 }
 
+.about_inner {
+    display: flex;
+}
+.about__info {
+    width: 375px;
+    margin-right: 50px;
+    flex: none;
+}
