--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,56 @@ ul {
     margin-right: 50px;
     flex: none;
 }
+
+.about__info-item {
+    margin-bottom: 25px;
+    color: #E5E5E5;
+}
+
+.about__info-item span {
+    display: block;
+}
+
+.about__text p {
+    margin-bottom: 25px;
+}
+
+.video {
+    background-image: url("../images/video-bg.jpg");
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-align: right;
+}
+
+.video__text {
+    font-style: italic;
+    font-weight: 300;
+    font-size: 72px;
+    line-height: 84px;
+    color: #85CCDC;
+    padding-top: 444px;
+    margin-bottom: 40px;
+}
+
+.video__text span {
+    display: block;
+    padding-right: 285px;
+}
+
+.video__btn {
+    padding-left: 112px;
+    position: relative;
+    margin-right: 230px;
+}
+
+.video__btn::before {
+    content: "";
+    position: absolute;
+    top: -40px;
+    width: 100px;
+    height: 100px;
+    left: 0;
+    background-image: url("../images/youtube-btn.svg");
+}
