--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,15 @@ ul {
     left: 0;
     background-image: url("../images/youtube-btn.svg");
 }
+
+.seasons__inner {
+
+}
+
+.seasons__item {
+    width: 350px;
+    height: 250px;
+    background-image: url("../images/seasons-image-2.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+}
