--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,8 @@ ul {
     line-height: 42px;
 }
 
-.menu__list-link:hover {
+.menu__list-link:hover,
+.menu__list-link--active{
     color: #85CCDC;
     text-decoration: underline;
 }
@@ -255,7 +256,17 @@ ul {
     text-align: center;
 }
 
+/*start season 1*/
+.page-header {
+    background-image: url("../images/season-1bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 85vh;
+}
 
+
+/*end season 1*/
 
 
 
