--- a/css/style.css
+++ b/css/style.css
@@ -262,10 +262,39 @@ ul {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    height: 85vh;
+    height: 90vh;
+    position: relative;
 }
 
+.season-info {
+    position: absolute;
+    max-width: 1385px;
+    display: flex;
+    padding: 44px 47px 64px 35px;
+    background-color: #0E0E0E;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
 
+.season-info__num {
+    font-weight: bold;
+    font-size: 96px;
+    line-height: 56px;
+    text-align: center;
+    margin-right: 51px;
+}
+
+.season-info__num span {
+    display: block;
+    font-size: 36px;
+    line-height: 42px;
+}
+
+.season-info__text p {
+    margin-bottom: 15px;
+}
 /*end season 1*/
 
 
